--- a/views/allDetails.jade
+++ b/views/allDetails.jade
@@ -1,7 +1,13 @@
 doctype html
 html(lang="en")
+	link(href='/style/allDetails.css', rel='stylesheet')
 	body
-		h1 ALL STEP-2015 INTERNS
+		h1 Git Status
+		div
+			form(name="searchForm",method="post",action="search",id="searchForm")
+				input(type="text", name="gitId",placeholder="Enter a gitHub id...",id="search" required)
+				input(type="submit",value="Search",id="submit")
+		h2 ALL STEP-2015 INTERNS
 		ul
 			each name in user
 				li
