Made a page for error display also change some url

--- a/views/createOneHtml.jade
+++ b/views/createOneHtml.jade
@@ -1,6 +1,6 @@
 doctype html
 html(lang="en")
-	link(href='/style/allDetails.css', rel='stylesheet')
+	link(href='/style/createOneDetails.css', rel='stylesheet')
 	head
 	body
 		h1 Git Status
