--- a/views/allDetails.jade
+++ b/views/allDetails.jade
@@ -4,7 +4,7 @@ html(lang="en")
 	body
 		h1 Git Status
 		div
-			form(name="searchForm",method="post",action="search",id="searchForm")
+			form(name="searchForm",method="get",action="search",id="searchForm")
 				input(type="text", name="gitId",placeholder="Enter a gitHub id...",id="search" required)
 				input(type="submit",value="Search",id="submit")
 		h2 ALL STEP-2015 INTERNS
