--- a/HTML/style/allDetails.css
+++ b/HTML/style/allDetails.css
@@ -1,3 +1,7 @@
+body{
+	font-family: "Segoe UI",Arial,sans-serif;
+}
+
 h1{
 	text-align: center;
     width: 173px;
@@ -13,13 +17,62 @@ h2{
 	padding: 10px;
     width: 350px;
     margin-left: 82%;
+	float:left;
 }
 #search{
-	font-size: 18px;
-    border-radius: 5px;
+	font-size: 16px;
+    border-radius: 3px;
+	height : 20px;
 }
 #submit{
-	font-size: 18px;
+	font-size: 16px;
     margin-left: 20px;
     width: 76px;
+	height : 25px;
+	border-radius: 0px;
+	border-collapse: collapse;
+	background-color: #A4A4A4;
+}
+
+.nameBlock{
+	width: 250px;
+	height: 40px;
+	background-color: #E6E6E6;
+	margin: 0 2px 2px 0;
+	padding: 25px 20px 10px 20px;
+	text-align: center;
+	overflow-x: inherit;
+	font-size : 16px;
+	float: left;
+
+	text-decoration: none;
+	color : #000;
+	font-weight: 500;
+	border-radius: 3px;
+}
+
+.nameBlock:hover {
+	transition: background-color 0.5s ease;
+	background-color: #A4A4A4;
+	font-size : 17px;
+	font-weight: 600;
+	color : white;
+}
+
+.nameContainer{
+	height: auto;
+	padding : 10px;
+	margin : 0 auto;
+}
+
+.wrapper{
+	width :90%;
+	height: 100%;
+	margin : 0 auto;
+}
+
+.header{
+	/*background-color: yellow;*/
+	width : 1000px;
+	margin: 0 auto;
 }
