--- a/views/allDetails.jade
+++ b/views/allDetails.jade
@@ -3,12 +3,13 @@ html(lang="en")
 	link(href='/style/allDetails.css', rel='stylesheet')
 	body
 		h1 Git Status
-		div
-			form(name="searchForm",method="post",action="search",id="searchForm")
-				input(type="text", name="gitId",placeholder="Enter a gitHub id...",id="search" required)
-				input(type="submit",value="Search",id="submit")
-		h2 ALL STEP-2015 INTERNS
-		ul
-			each name in user
-				li
-					a(href='/interns/'+name) !{name}
+		div(class='wrapper')
+			div(class='header')
+				form(name="searchForm",method="post",action="search",id="searchForm")
+					input(type="text", name="gitId",placeholder="Enter a gitHub id...",id="search" required)
+					input(type="submit",value="Search",id="submit")
+				h2 ALL STEP-2015 INTERNS
+			div(class='nameContainer')
+				each name in user
+						a(href='/interns/'+name)
+							div(class='nameBlock') !{name}
