--- a/HTML/style/allDetails.css
+++ b/HTML/style/allDetails.css
@@ -130,3 +130,9 @@ a:hover{
 a:active{
 	color: red;
 }
+#facebook{
+	margin-left: 86%;
+    margin-top: -29px;
+    width: 125px;
+    display: inline-block;
+}
