--- a/HTML/style/allDetails.css
+++ b/HTML/style/allDetails.css
@@ -16,7 +16,7 @@ h2{
 #searchForm{
 	padding: 10px;
     width: 300px;
-    margin-left: 81%;
+    margin-left: 230%;
 }
 #search{
 	font-size: 16px;
@@ -130,9 +130,11 @@ a:hover{
 a:active{
 	color: red;
 }
-#facebook{
-	margin-left: 86%;
-    margin-top: -29px;
-    width: 125px;
-    display: inline-block;
+.allForm{
+	width: 1200px;
+}
+#logout{
+	/*margin-left: 720px;*/
+    font-size: 21px;
+    width: 90px;
 }
