--- a/views/createOneHtml.jade
+++ b/views/createOneHtml.jade
@@ -1,6 +1,26 @@
 doctype html
 html(lang="en")
 	link(href='/style/createOneDetails.css', rel='stylesheet')
+	script(type="text/javascript")
+		(function(d, s, id){
+			var js, fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) return;
+			js = d.createElement(s); js.id = id;
+			js.src = "//connect.facebook.net/es_LA/sdk.js";
+			fjs.parentNode.insertBefore(js, fjs);
+			}(document, 'script', 'facebook-jssdk'));
+		window.fbAsyncInit = function() {
+			FB.init({
+				appId      : '1244021775614809',
+				status : true,
+				xfbml      : true,
+				version    : 'v2.5'
+			});
+			FB.getLoginStatus(function(response) {
+				if (response.status !== 'connected')
+					window.location='/index.html'
+			})
+		};
 	head
 	body
 		h1 Git Status
