--- a/views/createOneHtml.jade
+++ b/views/createOneHtml.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	link(href='/style/createOneDetails.css', rel='stylesheet')
-	script(type="text/javascript")
+	script(type="text/javascript").
 		(function(d, s, id){
 			var js, fjs = d.getElementsByTagName(s)[0];
 			if (d.getElementById(id)) return;
