Fixed bug for logout from createOne.html also store the users details

--- a/views/createOneHtml.jade
+++ b/views/createOneHtml.jade
@@ -24,7 +24,7 @@ html(lang="en")
 	head
 	body
 		h1 Git Status
-		form(name="signout",method="get",action="logout")
+		form(name="signout",method="get",action="/logout")
 			input(type="submit",value="Logout")
 		div(class='userData')
 			table(class='details')
