--- a/views/allDetails.jade
+++ b/views/allDetails.jade
@@ -34,7 +34,7 @@ html(lang="en")
 							input(type="text", name="gitId",placeholder="Enter a gitHub id...",id="search" required)
 							input(type="submit",value="Search",id="submit")
 					div(style="display:inline-block")
-						form(name="signout",method="get",action="logout" id="logout")
+						form(name="signout",method="get",action="/logout" id="logout")
 							input(type="submit",value="Logout")
 				h2 ALL STEP-2015 INTERNS
 			div(class='nameContainer')
