--- a/HTML/style/allDetails.css
+++ b/HTML/style/allDetails.css
@@ -2,61 +2,24 @@ body{
 	font-family: "Segoe UI",Arial,sans-serif;
 }
 
-h1{
-	text-align: center;
-    width: 173px;
-	margin: 0 auto;
-	border-bottom: 2px lightgrey dashed;
-}
 h2{
 	width: 290px;
 	margin: 0 auto;
 	text-align: center;
 }
-#searchForm{
-	padding: 10px;
-    width: 300px;
-    margin-left: 230%;
-}
-#search{
-	font-size: 16px;
-    border-radius: 3px;
-	height : 20px;
-}
-#submit{
-	background-color: #A4A4A4;
-    border: none;
-    color: white;
-    padding: 4px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-	margin-left: 3px;
-}
-
-#submit:hover {
-	transition: background-color 0.5s ease;
-	background-color: #E6E6E6;
-	color: black;
-}
 
 .nameContainer{
-	height: auto;
+	width: 100%;
+	height: 1500px;
 	padding : 10px;
 	margin : 0 auto;
 }
 
 .wrapper{
 	width :90%;
-	height: 100%;
-	margin : 0 auto;
+	margin : 120px auto;
 }
 
-.header{
-	width : 1000px;
-	margin: 0 auto;
-}
 .nameBlock_new{
 	width: 250px;
 	height: 100px;
@@ -129,12 +92,4 @@ a:hover{
 }
 a:active{
 	color: red;
-}
-.allForm{
-	width: 1200px;
-}
-#logout{
-	/*margin-left: 720px;*/
-    font-size: 21px;
-    width: 90px;
 }
