--- a/views/allDetails.jade
+++ b/views/allDetails.jade
@@ -1,42 +1,9 @@
 doctype html
 html(lang="en")
-	link(href='/style/allDetails.css', rel='stylesheet')
-	script(type='text/javascript').
-		function logout(){		
-			window.location = '/index.html'
-		}
-		(function(d, s, id){
-			var js, fjs = d.getElementsByTagName(s)[0];
-			if (d.getElementById(id)) return;
-			js = d.createElement(s); js.id = id;
-			js.src = "//connect.facebook.net/es_LA/sdk.js";
-			fjs.parentNode.insertBefore(js, fjs);
-			}(document, 'script', 'facebook-jssdk'));
-		window.fbAsyncInit = function() {
-			FB.init({
-				appId      : '1244021775614809',
-				status : true,
-				xfbml      : true,
-				version    : 'v2.5'
-			});
-			FB.getLoginStatus(function(response) {
-				if (response.status !== 'connected')
-					window.location='/index.html'
-			})
-		};
+	include ./head.jade
 	body
-		h1 Git Status
+		include ./header.jade
 		div(class='wrapper')
-			div(class='header')
-				div(class="allForm")
-					div(style="display:inline-block;margin-right:0px;")
-						form(name="searchForm",method="get",action="search",id="searchForm")
-							input(type="text", name="gitId",placeholder="Enter a gitHub id...",id="search" required)
-							input(type="submit",value="Search",id="submit")
-					div(style="display:inline-block")
-						form(name="signout",method="get",action="/logout" id="logout")
-							input(type="submit",value="Logout")
-				h2 ALL STEP-2015 INTERNS
 			div(class='nameContainer')
 				each user in basicData
 						div(class='nameBlock_new')
