--- a/HTML/style/index.css
+++ b/HTML/style/index.css
@@ -1,25 +1,60 @@
-body{
-	width: 400px;
-	margin: 0 auto;
-}
-h1 {
+/*h1 {
 	font-size: 60px;
 	text-align: center;
 	font-weight: 400;
 	font-family: "Arial";
 	/*border-bottom: 3px solid black;*/
-	width: 360px;
+/*	width: 360px;
 	margin: 0 auto;
 	padding-top: 20px;
-}
+}*/
 
-.main{
-	height: 300px;
-	background-color: #fffff0;
-	border-radius: 5px;
-	margin-top: 225px;
-}
 #info{
 	text-align: center;
 	margin-top: 33px;
+}
+
+#cover{
+	position:fixed;
+	top:0;
+	left:0;
+	background:rgba(0,0,0,0.6);
+	z-index:5;
+	width:100%;
+	height:100%;
+	display:none;
+}
+#loginScreen {
+	height:400px;
+	width:500px;
+	margin:0 auto;
+	position:relative;
+	z-index:10;
+	display:none;
+	border:2px solid skyblue;
+	border-radius:10px;
+	background-color: silver;
+}
+
+#loginScreen:target, #loginScreen:target + #cover{
+	display:block;
+	opacity:2;
+}
+.cancel {
+	display:block;
+	position:absolute;
+	top:3px;
+	right:2px;
+	background:rgb(245,245,245);
+	color:black;
+	height:30px;
+	width:35px;
+	font-size:30px;
+	text-decoration:none;
+	text-align:center;
+	font-weight:bold;
+}
+
+.login-image{
+	margin: 30% 12%;
 }
