--- a/views/createOneHtml.jade
+++ b/views/createOneHtml.jade
@@ -19,7 +19,7 @@ html(lang="en")
 			});
 			FB.getLoginStatus(function(response) {
 				if (response.status !== 'connected')
-					window.location='/index.html'
+					window.location='/'
 			})
 		};
 	body
