--- a/views/head.jade
+++ b/views/head.jade
@@ -1,9 +1,12 @@
 head
     link(href='/style/allDetails.css', rel='stylesheet')
     link(href='/style/header.css', rel='stylesheet')
+    link(href='/style/index.css', rel='stylesheet')
+    script(src="https://code.jquery.com/jquery-1.10.2.js")
+    script(src="../script/scroll-script.js")
     script(type='text/javascript').
         function logout(){
-            window.location = '/index.html'
+            window.location = '/'
         }
         (function(d, s, id){
             var js, fjs = d.getElementsByTagName(s)[0];
@@ -21,6 +24,6 @@ head
             });
             FB.getLoginStatus(function(response) {
                 if (response.status !== 'connected')
-                    window.location='/index.html'
+                    window.location='/'
             })
         };
