--- a/views/header.jade
+++ b/views/header.jade
@@ -2,11 +2,19 @@ div(class='header')
     div(class='logo')
         h1(id='page-name') Git Status
     div(class='local-heading')
+        div(class='menu-col')
+            a(href='/',class='menu') Home
+        div(class='menu-col')
+            a(href='/',class='menu') About
+        div(class='menu-col')
+            a(href='/',class='menu') Contact
+        div(class='menu-col-end')
+            a(href="/logout",class="menu") Log Out
     div(class='others')
-        div(class='log-out')
-            form(name="signout",method="get",action="/logout" id="logout")
-                input(type="submit",value="Logout",id="logout-button")
+        div(class='user-name') Welcome User
         div(class='search-bar')
             form(name="searchForm",method="get",action="search",id="searchForm")
-                input(type="text", name="gitId",placeholder="Enter a gitHub id...",id="search" required)
-                input(type="submit",value="Search",id="submit")
+                div(class='search-box')
+                    input(type="text", name="gitId",placeholder="Enter a gitHub id...",id="search" required)
+                div(class="search-button")
+                    input(type="image",src='/images/active-search-symbol.svg')
