--- a/views/index.jade
+++ b/views/index.jade
@@ -7,16 +7,17 @@ html(lang="en")
             div(class='logo')
                 h1(id='page-name') Git Status
             div(class='local-heading')
+                div(class='menu-col')
+                    a(href='/',class='menu') Home
+                div(class='menu-col')
+                    a(href='/',class='menu') About
+                div(class='menu-col')
+                    a(href='/',class='menu') Contact
+                div(class='menu-col-end')
+                    a(href="#loginScreen",class="menu") Log In
             div(class='others')
-                div(class='log-out')
-                    a(href="#loginScreen",class="button")
-                        button(id="logout-button",onClick='toggleBox' #loginScreen) Log In
-
-                div(class='search-bar')
-                    form(name="searchForm",method="get",action="search",id="searchForm")
-                        input(type="text", name="gitId",placeholder="Enter a gitHub id...",id="search" required)
-                        input(type="submit",value="Search",id="submit")
         div(class='wrapper')
+            div(class='about')
             div(align="center")
             div(id="loginScreen")
                 a(href="/auth/facebook")
