--- a/views/allDetails.jade
+++ b/views/allDetails.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
 	include ./head.jade
 	body
-		include ./header.jade
+		include ./logged-in-navigation.jade
 		div(class='wrapper')
 			div(class='nameContainer')
 				each user in basicData
