--- a/views/createOneHtml.jade
+++ b/views/createOneHtml.jade
@@ -23,8 +23,8 @@ html(lang="en")
 			})
 		};
 	body
-		include ./header.jade
-		div(class='userData')
+		include ./logged-in-navigation.jade
+		div(class='wrapper')
 			table(class='details')
 				tr
 					th Name
