--- a/views/head.jade
+++ b/views/head.jade
@@ -1,9 +1,8 @@
 head
     link(href='/style/allDetails.css', rel='stylesheet')
-    link(href='/style/header.css', rel='stylesheet')
     link(href='/style/index.css', rel='stylesheet')
+    link(href='/style/navigation.css', rel='stylesheet')
     script(src="https://code.jquery.com/jquery-1.10.2.js")
-    script(src="../script/scroll-script.js")
     script(type='text/javascript').
         function logout(){
             window.location = '/'
